# DetectionsAssociationTool

./: CMakeLists.txt  README.md
assets/: resources.qrc
src/: MainWindow.cxx  MainWindow.h  MainWindow.ui  customLabel.cxx  customLabel.h  detection.cxx  detection.h  image.cxx  image.h  main.cxx  object.cxx  object.h  utils.cxx  utils.h
